--- a/reddit-clone/public/index.html
+++ b/reddit-clone/public/index.html
@@ -24,7 +24,7 @@
   crossorigin="anonymous">
     <title>React News Rating App</title>
   </head>
-  <body>
+  <body class="Site">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
